feat: add coordinatorProfit share to getUserById if user is a coordinator
